--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,7 +28,9 @@
                         "src/cloth.cpp",
                         "src/values.cpp",
                         "src/controller.cpp",
+                        "src/view.cpp",
                      "-I${cwd}/header",
+                     "-std=c++11",
                      "-lglui",
                      "-lglut32",
                      "-lglu32",
